Correct modal z-index

--- a/index.css
+++ b/index.css
@@ -172,6 +172,7 @@ ul {
 #modal-form {
     display: none;
     position: fixed;
+    z-index: 1;
     top: 0;
     bottom: 0;
     right: 0;
